# leaderboard-rust

./: .env.example  .gitignore  Cargo.toml  README.MD
src/: app.rs  config.rs  main.rs
src/config/: config.rs  mod.rs
src/http/: mod.rs
src/http/controllers/: leaderboard_controller.rs  mod.rs  submissions_controller.rs  user_controller.rs
src/http/requests/: leaderboard_request.rs  mod.rs  submission.rs  submission_request.rs
src/models/: leaderboard.rs  mod.rs  submission.rs  user.rs
src/repositories/: leaderboard_repository.rs  mod.rs  submission_repository.rs
