[package]
name = "leaderboard-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
charybdis = "0.3.0"
charybdis_macros = "0.3.0"
chrono = "0.4.33"
dotenvy = "0.15.7"
scylla = { version = "0.12.0", features = ["time", "chrono"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
validator = { version = "0.16.1", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
